--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landrick",
+  "name": "Elektropay",
   "version": "2.0.0",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
